// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|Table Financial Table 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtfq.s3"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtfq.s3"
              />
            </span>
          </span>
        </th>
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-1973saa-TableCell"
        />
        <th
          className="css-1qrssk1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-kljbfu-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtfy.cg"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtfy.cg"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtg3.4m"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtg3.4m"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtg7.rz"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtg7.rz"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtgb.01"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtgb.01"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
          colSpan={2}
        >
          <span
            data-column="Name"
          >
            Sum
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Design System|Table Fixed Header Table 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtgu.j9"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtgu.j9"
              />
            </span>
          </span>
        </th>
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-a3pxss-TableCell"
        />
        <th
          className="css-1r1qkc1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1r1qkc1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1r1qkc1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-1w04xju-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vth3.6p"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vth3.6p"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vth7.8g"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vth7.8g"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vthb.l9"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vthb.l9"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vthf.lg"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vthf.lg"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vthj.rh"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vthj.rh"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vtho.w1"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vtho.w1"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vths.tf"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vths.tf"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vthw.35"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vthw.35"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-_n6vti1.lq"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-_n6vti1.lq"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Design System|Table Regular Table with simple rows 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-1qrssk1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-kljbfu-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
